added win% scatterplot

--- a/MSAS Project-Top Shifting Teams.ipynb
+++ b/MSAS Project-Top Shifting Teams.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c66de3d6",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "c0c7098c",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "32     29.2       0.381      2627          1637     62.3       0.339  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "661ea7a0",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        "72     21.4       0.290      2493          2031     81.5       0.312  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "ae9ee581",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "60      9.4       0.323      2216          1226     55.3       0.332  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,6 +671,46 @@
    "source": [
     "worst_shifters = overall_top_shifters.sort_values(by=['%'], ascending=True)\n",
     "worst_shifters.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42ae9c7f",
+   "metadata": {},
+   "source": [
+    "From these two dataFrames, we see that the team over the three years covered in this table was the 2021 Los Angeles Dodgers, while we see that the team that shifted the least often over the same time span was the 2021 San Francisco Giants. Interestingly, these two teams had the second-best and best records, respectively, across MLB for the 2021 season, despite their dramatically different approaches to tech defense."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9731469e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "giants2021 = df.iloc[80, 5]\n",
+    "dodgers2021 = df.iloc[83, 5]\n",
+    "diff = dodgers2021 - giants2021\n",
+    "diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f36a198c",
+   "metadata": {},
+   "source": [
+    "In fact, the Dodgers shifted 28.5% more often than the giants."
    ]
   }
  ],
